chore(store): fix "no items" alignment on mobile

--- a/src/app/routes/world/map/features/store-feature.component.scss
+++ b/src/app/routes/world/map/features/store-feature.component.scss
@@ -8,7 +8,9 @@
   @include pow-dialog();
   color: white;
   display: block;
-
+  h1 {
+    margin: auto;
+  }
   .title {
     text-align: center;
     display: block;
